syntax = "proto3";

package complex;

option go_package = "complex/";

message ComplexMessage {
    DummyMessage dummy = 2;
    repeated DummyMessage multiple_dummpy = 3;
}

message DummyMessage {
    int32 id = 1;
    string name = 2;
}
